--- a/boleyncms/templates/base.html
+++ b/boleyncms/templates/base.html
@@ -14,7 +14,7 @@
     {% cms_toolbar %}
      <!-- Image Background Page Header -->
     <!-- Note: The background image is set within the custom.css file. -->
-    <header class="business-header">
+    <header class="site-header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
