--- a/boleyncms/templates/base.html
+++ b/boleyncms/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}This is my new project home page{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% render_block "css" %}
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
      <!-- Custom -->
       <link rel="stylesheet" href="http://bootswatch.com/lumen/bootstrap.min.css">
@@ -18,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="tagline">Business Name or Tagline</h1>
+                    <h1 class="tagline">Boleyn workshop</h1>
                 </div>
             </div>
         </div>
